Mon Oct 20 12:25:45 UTC 2008  Simon McQueen  <sm@prismtech.com>

        * TAO_IDL/be/be_visitor_component/component_ch.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_ch.cpp:
        * tao/Object.h:
        * tao/PolicyC.h:

          Remove unsafe default of TAO_ORB_Core pointer from the CORBA::Object
          constructor that takes an IOP::IOR as primary argument. The pointer
          was defaulted to 0 but the first thing the constructor does is use
          it. Very little good is likely to come of that sort of thing.

Mon Oct 20 11:45:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/orsvcs/Naming/Naming_Context_Interface.cpp:

          WCHAR changes.

Mon Oct 20 11:36:06 UTC 2008  Vladimir Zykov  <vzykov@prismtech.com>

        * orbsvcs/orbsvcs/Notify/XML_Loader.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_FactoryRegistry.cpp:
        * orbsvcs/orbsvcs/PortableGroup/PG_FactoryRegistry.h:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Factory.cpp:
        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.h:
        * orbsvcs/FT_ReplicationManager/FT_ReplicationManager.cpp:
        * orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.cpp:
        * orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.h:
        * orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Service.cpp:
        * orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Service.h:
        * orbsvcs/Logging_Service/RTEvent_Logging_Service/RTEvent_Logging_Service.h:
        * orbsvcs/Logging_Service/RTEvent_Logging_Service/RTEvent_Logging_Service.cpp:
        * orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.cpp:
        * orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.h:

          Fixed incorrect use of ACE_TEXT_* macroses.

        * orbsvcs/ImplRepo_Service/tao_imr_i.cpp:

          Changed %s to %C in ACE_DEBUG/ACE_ERROR where it was evident.
